--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   },
   "dependencies": {
     "@remix-run/router": "file:../../react-router/build/node_modules/@remix-run/router",
-    "vue": "^3.2.25"
+    "vue": "3.2.33"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.2.0",
-    "prettier": "2.6.0",
-    "typescript": "^4.5.4",
-    "vite": "^2.8.0",
-    "vue-tsc": "^0.29.8"
+    "@babel/types": "7.17.10",
+    "@vitejs/plugin-vue": "2.3.3",
+    "prettier": "2.6.2",
+    "typescript": "4.6.4",
+    "vite": "2.9.9",
+    "vue-tsc": "0.34.13"
   }
 }
