--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
-  "name": "remix-router-playground",
-  "private": true,
-  "version": "0.0.0",
+  "name": "remix-router-vue",
+  "version": "0.1.0",
   "scripts": {
     "clean": "rm -rf dist",
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "tsc"
   },
   "dependencies": {
     "@remix-run/router": "0.1.0",
-    "vue": "3.2.33"
+    "vue": "3.2.36"
   },
   "devDependencies": {
-    "@babel/types": "7.17.10",
-    "@vitejs/plugin-vue": "2.3.3",
+    "@babel/types": "7.18.0",
     "prettier": "2.6.2",
-    "typescript": "4.6.4",
-    "vite": "2.9.9",
-    "vue-tsc": "0.34.13"
+    "typescript": "4.6.4"
   }
 }
