--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "remix-router-vue",
+  "private": true,
+  "name": "remix-routers",
+  "description": "Monorepo for remix routers for different UI libraries",
   "version": "0.1.0",
+  "workspaces": [
+    "packages/vue"
+  ],
   "scripts": {
-    "clean": "rm -rf dist",
-    "build": "tsc"
-  },
-  "dependencies": {
-    "@remix-run/router": "0.1.0",
-    "vue": "3.2.36"
+    "build": "npm run build --workspaces",
+    "clean": "git clean -fX .",
+    "postinstall": "patch-package"
   },
   "devDependencies": {
-    "@babel/types": "7.18.0",
+    "@babel/types": "7.18.2",
+    "patch-package": "6.4.7",
     "prettier": "2.6.2",
     "typescript": "4.6.4"
   }
