--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
   "scripts": {
     "build": "npm run build --workspaces",
     "clean": "git clean -fX .",
-    "postinstall": "patch-package"
+    "lint": "eslint --ext .js,.ts .",
+    "prettier": "prettier --write .",
+    "postinstall": "patch-package",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@babel/types": "7.18.2",
+    "@typescript-eslint/eslint-plugin": "5.26.0",
+    "eslint": "8.16.0",
+    "eslint-config-prettier": "8.5.0",
+    "husky": "8.0.1",
+    "lint-staged": "12.4.2",
     "patch-package": "6.4.7",
     "prettier": "2.6.2",
     "typescript": "4.6.4"
