wire up basic cypress testing against example app

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -28,6 +28,7 @@
   ],
   "scripts": {
     "build": "tsc -b",
+    "example": "cd example && npm run build && npm run preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
