--- a/.eslintrc
+++ b/.eslintrc
@@ -2,8 +2,11 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "parserOptions": { "project": ["./tsconfig.json"] },
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint", "cypress"],
   "extends": ["eslint:recommended"],
+  "env": {
+    "cypress/globals": true
+  },
   "rules": {
     "prefer-const": "off"
   },
