--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "build": "rollup -c rollup.config.js && npm run build --workspaces",
     "clean": "git clean -fX .",
     "lint": "eslint --ext .js,.ts .",
+    "integration:start": "npm run example --workspace packages/vue",
+    "integration:test": "cypress run",
+    "integration": "start-server-and-test integration:start 3000 integration:test",
     "prettier": "prettier --write .",
     "postinstall": "patch-package",
     "prepare": "husky install"
@@ -19,13 +22,16 @@
     "@rollup/plugin-commonjs": "22.0.0",
     "@rollup/plugin-typescript": "8.3.2",
     "@typescript-eslint/eslint-plugin": "5.26.0",
+    "cypress": "9.7.0",
     "eslint": "8.16.0",
     "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-cypress": "2.12.1",
     "husky": "8.0.1",
     "lint-staged": "12.4.2",
     "patch-package": "6.4.7",
     "prettier": "2.6.2",
     "rollup": "2.75.0",
+    "start-server-and-test": "1.14.0",
     "typescript": "4.6.4"
   }
 }
