--- a/packages/vue/example/package.json
+++ b/packages/vue/example/package.json
@@ -4,10 +4,10 @@
   "description": "Demo application using remix-router-vue",
   "main": "main.ts",
   "scripts": {
+    "build": "tsc && vite build",
     "clean": "rm -rf dist",
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 3000"
   },
   "author": "",
   "license": "ISC",
