--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
       - uses: bahmutov/npm-install@v1
-      - run: npm run lint
+      - run: yarn lint
 
   Build:
     name: "⚙️ Build"
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
       - uses: bahmutov/npm-install@v1
-      - run: npm run build
+      - run: yarn build
 
   Integration:
     name: "🧪 Test"
@@ -29,4 +29,4 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
       - uses: bahmutov/npm-install@v1
-      - run: npm run integration
+      - run: yarn integration
