align useFetcher API

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -35,6 +35,7 @@
   "scripts": {
     "build": "vite build && tsc -b",
     "clean": "git clean -fX .",
+    "dev": "vite dev",
     "integration:start": "vite dev --mode=production --port 3000",
     "integration:test": "cypress run --config-file ./../../cypress.json",
     "integration": "start-server-and-test integration:start http-get://localhost:3000/ integration:test"
