--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -38,7 +38,8 @@
     "dev": "vite dev",
     "integration:start": "vite dev --mode=production --port 3000",
     "integration:test": "cypress run --config-file ./../../cypress.json",
-    "integration": "start-server-and-test integration:start http-get://localhost:3000/ integration:test"
+    "integration": "start-server-and-test integration:start http-get://localhost:3000/ integration:test",
+    "prepublishOnly": "vite build"
   },
   "dependencies": {
     "@remix-run/router": "0.1.0",
