--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,5 +1,10 @@
 name: Validate
 on:
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - "**/README.md"
   pull_request:
     branches:
       - main
