--- a/packages/react-stub/package.json
+++ b/packages/react-stub/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "6.4.0-pre.2"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.1.19",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "@vitejs/plugin-react": "1.3.2"
