--- a/packages/react-stub/package.json
+++ b/packages/react-stub/package.json
@@ -9,6 +9,7 @@
     "build": "vite build && tsc -b",
     "clean": "git clean -fX .",
     "dev": "vite dev",
+    "integration:open": "cypress open --config-file ./../../cypress.json",
     "integration:start": "vite build && vite preview --port 3000",
     "integration:test": "cypress run --config-file ./../../cypress.json",
     "integration": "start-server-and-test integration:start http-get://localhost:3000/ integration:test",
