--- a/packages/vue/tsconfig.json
+++ b/packages/vue/tsconfig.json
@@ -7,6 +7,7 @@
     "declarationDir": "dist",
     "emitDeclarationOnly": true,
     "forceConsistentCasingInFileNames": true,
+    "jsx": "preserve",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "ESNext",
     "moduleResolution": "Node",
