--- a/packages/react-stub/package.json
+++ b/packages/react-stub/package.json
@@ -9,9 +9,9 @@
     "build": "vite build && tsc -b",
     "clean": "git clean -fX .",
     "dev": "vite dev",
-    "integration:open": "cypress open --config-file ./../../cypress.json",
+    "integration:open": "cypress open --config-file ./../../cypress.config.ts",
     "integration:start": "vite build && vite preview --port 3000",
-    "integration:test": "cypress run --config-file ./../../cypress.json",
+    "integration:test": "cypress run --config-file ./../../cypress.config.ts",
     "integration": "start-server-and-test integration:start http-get://localhost:3000/ integration:test",
     "prepublishOnly": "echo \"Refusing to publish react-router-dom-stub\" && exit 1"
   },
