--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -40,7 +40,7 @@
     "integration:start": "vite dev --mode=production --port 3000",
     "integration:test": "cypress run --config-file ./../../cypress.json",
     "integration": "start-server-and-test integration:start http-get://localhost:3000/ integration:test",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "rm -rf dist && npm run build"
   },
   "dependencies": {
     "@remix-run/router": "0.2.0-pre.2",
