--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -41,6 +41,9 @@
     "@remix-run/router": "^0.2.0-pre.6",
     "svelte": "^3.48.0"
   },
+  "peerDependencies": {
+    "svelte": ">=3.47.0"
+  },
   "devDependencies": {
     "@sveltejs/kit": "^1.0.0-next.372",
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
