--- a/packages/react-stub/package.json
+++ b/packages/react-stub/package.json
@@ -16,14 +16,14 @@
     "prepublishOnly": "echo \"Refusing to publish react-router-dom-stub\" && exit 1"
   },
   "dependencies": {
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-router-dom": "6.4.0-pre.7"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.0-pre.13"
   },
   "devDependencies": {
     "@types/babel__core": "^7.1.19",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.5",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "1.3.2"
   }
 }
