--- a/packages/vue/tsconfig.json
+++ b/packages/vue/tsconfig.json
@@ -21,5 +21,6 @@
     "strict": true,
     "target": "ESNext"
   },
+  "exclude": ["./reference-app", "vite.config.ts"],
   "include": ["./**/*.ts", "./**/*.vue"]
 }
