--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -43,13 +43,13 @@
     "prepublishOnly": "rm -rf dist && npm run build"
   },
   "dependencies": {
-    "@remix-run/router": "0.2.0-pre.10",
-    "vue": "3.2.36"
+    "@remix-run/router": "0.2.0-pre.10"
   },
   "peerDependencies": {
     "vue": ">=3.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "2.3.3"
+    "@vitejs/plugin-vue": "2.3.3",
+    "vue": "^3.2.41"
   }
 }
