Add support for outlet

--- a/packages/solid/tsconfig.json
+++ b/packages/solid/tsconfig.json
@@ -19,7 +19,8 @@
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "outDir": "dist",
     "paths": {
-      "~/*" : ["./reference-app/*"]
+      "~/*" : ["./reference-app/*"],
+      "remix-router-solid" : ["./src/index.ts"]
     } ,
     "resolveJsonModule": true,
     "rootDir": "."
